test/classes/deitz/infer/infer_field11.good
infer_field11.chpl:6: error: default initialization with type 'R(int(64))' is not yet supported
infer_field11.chpl:2: note: field 'x' is a generic value
infer_field11.chpl:2: note: consider separately declaring a type field for it or using a 'new' call
